--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sdl2 = "0.35.1"
 rand = "0.8.4"
+
+[dependencies.sdl2]
+version = "0.32.1"
+default-features = false
+features = ["image"]
