--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,6 @@ edition = "2021"
 rand = "0.8.4"
 
 [dependencies.sdl2]
-version = "0.32.1"
+version = "^0.36.0"
 default-features = false
 features = ["image"]
